# CLionProjects

./: CLionProjects-lab3.rar  CLionProjects-lab4.rar  CLionProjects-lab6.rar  COMP10050-assignment1.rar  COMP10050-assignment2.rar  COMP10050-assignment3.rar  makefile.txt  statistics.py
COMP10050-assignment1/: CMakeLists.txt  artistes+songs.txt  help.c  help.h  main.c  mylib.c  mylib.h
COMP10050-assignment1/inputFiles/: sample-songs.txt
COMP10050-assignment2/: Assignment_Documentation.txt  CMakeLists.txt  help.c  help.h  main.c  othBoard.c  othBoard.h  othMove.c  othMove.h  othello-results.txt
COMP10050-assignment3/: CMakeLists.txt  ass3q1.c  ass3q1.h  ass3q1.out  ass3q2.c  ass3q2.h  ass3q2.out  ass3q3.c  ass3q3.h  ass3q3.out  ass3q4.c  ass3q4.h  ass3q5.c  ass3q5.h  ass3q5.out  ass3q6a.c  ass3q6a.h  ass3q6a.out  ass3q6b.c  ass3q6b.h  ass3q6c.c  ass3q6c.h  avg_and_max.c  avg_and_max.h  corrected_avg_and_max.c  corrected_avg_and_max.h  euclid.c  euclid.h  fact.c  fact.h  main.c
FirstCLionProject/: CMakeLists.txt  FirstSourceFile.c  main.c
MatrixCalculator/: CMakeLists.txt  main.c
lab2-libraries/: CMakeLists.txt  library.c  library.h
lab2-weather/: CMakeLists.txt  main.c
lab2-weather/inputFiles/: weather.txt
p3q2/: CMakeLists.txt  main.c
p3q3/: CMakeLists.txt  main.c
p3q3/inputFiles/: sorted-100000.txt
p3q4/: CMakeLists.txt  main.c
p3q5/: CMakeLists.txt  main.c
p3q5/inputFiles/: sorted-10000.txt
p3q6/: CMakeLists.txt  main.c
p4q2/: CMakeLists.txt  main.c
p4q3/: CMakeLists.txt  main.c
p4q3/inputFiles/: gaa-results.out  gaa-results.txt  soccer-results.out  soccer-results.txt
p4q4/: CMakeLists.txt  main.c
p6q1/: CMakeLists.txt  main.c
p6q2/: CMakeLists.txt  main.c
p6q3/: CMakeLists.txt  main.c
p8/: CMakeLists.txt  main.c
