cmake_minimum_required(VERSION 3.17)
project(COMP10050_assignment3 C)

set(CMAKE_C_STANDARD 11)

find_library(CUNIT libcunit.dll.a C:/cygwin64/lib)
include_directories(C:/cygwin64/usr/include/CUnit .)

add_executable(COMP10050_assignment3 main.c avg_and_max.h avg_and_max.c fact.h fact.c ass3q1.c ass3q1.h corrected_avg_and_max.c corrected_avg_and_max.h ass3q2.c ass3q2.h ass3q3.c ass3q3.h ass3q4.c ass3q4.h ass3q5.c ass3q5.h euclid.c euclid.h ass3q6a.c ass3q6a.h ass3q6b.c ass3q6b.h ass3q6c.c ass3q6c.h)
add_executable(ass3q1 ass3q1.c ass3q1.h avg_and_max.c avg_and_max.h)
set_target_properties(ass3q1 PROPERTIES SUFFIX ".out")
add_executable(ass3q2 ass3q2.c ass3q2.h corrected_avg_and_max.c corrected_avg_and_max.h)
set_target_properties(ass3q2 PROPERTIES SUFFIX ".out")
add_executable(ass3q3 ass3q3.c ass3q3.h avg_and_max.c avg_and_max.h)
set_target_properties(ass3q3 PROPERTIES SUFFIX ".out")
add_executable(ass3q4 ass3q4.c ass3q4.h corrected_avg_and_max.c corrected_avg_and_max.h)
set_target_properties(ass3q4 PROPERTIES SUFFIX ".out")
add_executable(ass3q5 ass3q5.c ass3q5.h fact.c fact.h)
set_target_properties(ass3q5 PROPERTIES SUFFIX ".out")
add_executable(ass3q6a ass3q6a.c ass3q6a.h euclid.c euclid.h)
set_target_properties(ass3q6a PROPERTIES SUFFIX ".out")
add_executable(ass3q6b ass3q6b.c ass3q6b.h euclid.c euclid.h)
set_target_properties(ass3q6b PROPERTIES SUFFIX ".out")
add_executable(ass3q6c ass3q6c.c ass3q6c.h euclid.c euclid.h)
set_target_properties(ass3q6c PROPERTIES SUFFIX ".out")

target_link_libraries(COMP10050_assignment3 PUBLIC ${CUNIT})
target_link_libraries(ass3q1 PUBLIC ${CUNIT})
target_link_libraries(ass3q2 PUBLIC ${CUNIT})
target_link_libraries(ass3q3 PUBLIC ${CUNIT})
target_link_libraries(ass3q4 PUBLIC ${CUNIT})
target_link_libraries(ass3q5 PUBLIC ${CUNIT})
target_link_libraries(ass3q6a PUBLIC ${CUNIT})
target_link_libraries(ass3q6b PUBLIC ${CUNIT})
target_link_libraries(ass3q6c PUBLIC ${CUNIT})
